kubernetes/media/transmission/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
spec:
  ports:
    - port: 9091
      protocol: TCP
      targetPort: http-tcp
  selector:
    app: transmission
  type: ClusterIP
