kubernetes/media/transmission/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
  namespace: transmission
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`transmission.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: transmission
          port: 9091
  tls:
    secretName: transmission-certificate
